2006.208: version 1.4
	- Update libmseed to 1.8.
	- Fix small, inconsequential memory leak.

2006.205: version 1.3
	- Adjust start time using the Begin ('B' SAC header variable)
	offset.

2006.183: version 1.2
	- Update libmseed to 1.7.

2006.137: version 1.1
	- Add -m option to write metadata in SAC file(s) to a specified
	file, a header followed by one line per input SAC file.
	- Fix typo in sacformat.h for the FUNDEF define.

2006.125: version 1.0
	- Update to libmseed 1.6.3.
	- Check SAC header variables for NULL before using them.
	- Remove leading space characters from string header variables
	when reading ALPHA files, compensation for poorly formed header.
	- Use SAC header variable KHOLE as SEED location code if set.

2006.051:
	- Initial version.  Autodetects alpha, binary and byte order.