@@ -1,7 +1,7 @@
 
 DIRS = libmseed src
 
-all clean static install gcc gcc64 debug gccdebug ::
+all clean static install gcc gcc32 gcc64 debug gccdebug gcc32debug gcc64debug ::
 	@for d in $(DIRS) ; do \
 	    echo "Running $(MAKE) $@ in $$d" ; \
 	    if [ -f $$d/Makefile -o -f $$d/makefile ] ; \
